--- a/HappyHouse/Properties/launchSettings.json
+++ b/HappyHouse/Properties/launchSettings.json
@@ -17,11 +17,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
+    "HappyHouse": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7057;http://localhost:5009",
+      "applicationUrl": "https://localhost:7002;http://localhost:5009",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
