--- a/HouseRent_Api/appsettings.json
+++ b/HouseRent_Api/appsettings.json
@@ -10,6 +10,9 @@
     "Default": "Data Source=DDOKKARI-L-5501\\SQLEXPRESS;Initial Catalog=HouseAPI;Persist Security Info=True;User ID=sa;Password=Welcome2evoke@1234;Trust Server Certificate=true"
   },
 
+  "ApiSettings": {
+    "Secret": "HardWork is the Key to Success"
+  },
 
 
   "Kestrel": {
